--- a/mason.yaml
+++ b/mason.yaml
@@ -1,3 +1,5 @@
 bricks:
   clean_starter:
-    path: 'bricks/clean_starter'
+    path: bricks/clean_starter
+  cubit_starter:
+    path: bricks/cubit_starter
