--- a/bricks/clean_app/brick.yaml
+++ b/bricks/clean_app/brick.yaml
@@ -1,6 +1,6 @@
 name: clean_app
 description: Generates a new Flutter app with a clean architecture structure
-version: 0.1.0+1
+version: 1.0.0
 environment:
   mason: ">=0.1.0-dev <0.1.0"
 
