--- a/bricks/clean_app/hooks/pubspec.yaml
+++ b/bricks/clean_app/hooks/pubspec.yaml
@@ -4,6 +4,6 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  mason: any
-  flutter:
+  mason: ^0.1.0-dev.51
+  flutter: 
     sdk: flutter
